k8s-manifests/temple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temple-service
  namespace: temple
spec:
  selector:
    app: temple
  ports:
  - port: 80
    targetPort: 5000
  type: NodePort
